# drive_by_pickup_nav2_trajectory_plugin

./: .gitignore
src/drive_by_pickup_nav2_plugin/: CMakeLists.txt  global_planner_plugin.xml  package.xml
src/drive_by_pickup_nav2_plugin/include/drive_by_pickup_nav2_plugin/: pickup_mir_planner.hpp
src/drive_by_pickup_nav2_plugin/src/: pickup_mir_planner.cpp
src/nav2_planner/: CMakeLists.txt
src/nav2_planner/src/: planner_server.cpp
